Discribe what you changed

--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -96,10 +96,11 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="assets/projrct 1" alt="Project 1 thumbnail" />
+            <img class="project-thumb" src="portfolio-site/project 1" alt="Project 1 thumbnail" />
             <div class="card-body">
               <h3>Gaming Application / Happy Puzzle Land 🧩</h3>
-              <p></p>
+              <p>Kids’ puzzle game designed to boost creativity and problem-solving skills.
+                 Players rearrange the shuffled tiles to complete the picture while enjoying a playful and friendly design.</p>
               <p class="tech">HTML • Java script • CSS</p>
               <div class="card-actions">
                 <a class="btn small" href="https://github.com/udsh2000/Webassignment/commit/97af9c2289ca842341529b3d7ab599793ceb6d7d" target="_blank" rel="noopener">GitHub</a>
@@ -124,14 +125,14 @@
 
           <!-- Project 3 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="assets/project3.svg" alt="Project 3 thumbnail" />
+            <img class="project-thumb" src="portfolio-site/assets/Project 3" alt="Project 3 thumbnail" />
             <div class="card-body">
               <h3>Hotels Booking Website / Group Project</h3>
               <p></p>
               <p class="tech">Wordpress • Wamp sever • MongoDB</p>
               <div class="card-actions">
-                <a class="btn small" href="portfolio-site/assets/Project 3" target="_blank" rel="noopener">Wordpress</a>
-                <a class="btn small ghost" href="portfolio-site/assets/Project 3" aria-disabled="true">Live</a>
+                <a class="btn small" href="https://github.com/udsh2000/Webassignment/commit/8cc4ebbd826ef8439ab85fa620687088bed6f947" target="_blank" rel="noopener">GitHub</a>
+                <a class="btn small ghost" href="https://github.com/udsh2000/Webassignment/commit/8cc4ebbd826ef8439ab85fa620687088bed6f947" aria-disabled="true">Live</a>
               </div>
             </div>
           </article>
