Discribe what you changed

--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -111,7 +111,7 @@
 
           <!-- Project 2 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="assets/project2.svg" alt="Project 2 thumbnail" />
+            <img class="project-thumb" src="" alt="Project 2 thumbnail" />
             <div class="card-body">
               <h3>Mobile Application</h3>
               <p>Mobile application interface for tutorials, selling laptops. Admins manage content; notifications after orders.</p>
@@ -125,14 +125,14 @@
 
           <!-- Project 3 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="portfolio-site/assets/Project 3" alt="Project 3 thumbnail" />
+            <img class="project-thumb" src="portfolio-site/Project 3/Screenshot (528).png" alt="Project 3 thumbnail" />
             <div class="card-body">
               <h3>Hotels Booking Website / Group Project</h3>
               <p></p>
               <p class="tech">Wordpress • Wamp sever • MongoDB</p>
               <div class="card-actions">
-                <a class="btn small" href="https://github.com/udsh2000/Webassignment/commit/8cc4ebbd826ef8439ab85fa620687088bed6f947" target="_blank" rel="noopener">GitHub</a>
-                <a class="btn small ghost" href="https://github.com/udsh2000/Webassignment/commit/8cc4ebbd826ef8439ab85fa620687088bed6f947" aria-disabled="true">Live</a>
+                <a class="btn small" href="portfolio-site/Project 3" target="_blank" rel="noopener">GitHub</a>
+                <a class="btn small ghost" href="portfolio-site/Project 3" aria-disabled="true">Live</a>
               </div>
             </div>
           </article>
