Discribe what you changed

--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -96,7 +96,7 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="portfolio-site/project 1" alt="Project 1 thumbnail" />
+           <img class="project-thumb" src="p1.png" alt="Project 1 thumbnail" />
             <div class="card-body">
               <h3>Gaming Application / Happy Puzzle Land 🧩</h3>
               <p>Kids’ puzzle game designed to boost creativity and problem-solving skills.
@@ -111,10 +111,11 @@
 
           <!-- Project 2 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="" alt="Project 2 thumbnail" />
+            <img class="project-thumb" src="portfolio-site/Project 2/figma.jpg" alt="Project 2 thumbnail" />
             <div class="card-body">
               <h3>Mobile Application</h3>
               <p>Mobile application interface for tutorials, selling laptops. Admins manage content; notifications after orders.</p>
+              <br><br>
               <p class="tech">figma</p>
               <div class="card-actions">
                 <a class="btn small" href="https://www.figma.com/design/aFyR2MlxK51EL3O7nDQDqz/Untitled?node-id=1-2" target="_blank" rel="noopener">figma</a>
@@ -128,11 +129,12 @@
             <img class="project-thumb" src="portfolio-site/Project 3/Screenshot (528).png" alt="Project 3 thumbnail" />
             <div class="card-body">
               <h3>Hotels Booking Website / Group Project</h3>
-              <p></p>
+              <p>A modern travel and tourism website built with WordPress to showcase Serinity Hotels’ 
+                three branches and online booking features.</p>
               <p class="tech">Wordpress • Wamp sever • MongoDB</p>
               <div class="card-actions">
-                <a class="btn small" href="portfolio-site/Project 3" target="_blank" rel="noopener">GitHub</a>
-                <a class="btn small ghost" href="portfolio-site/Project 3" aria-disabled="true">Live</a>
+                <a class="btn small" href="https://github.com/udsh2000/Webassignment/tree/main/portfolio-site/Project%203" target="_blank" rel="noopener">GitHub</a>
+                <a class="btn small ghost" href="https://github.com/udsh2000/Webassignment/tree/main/portfolio-site/Project%203" aria-disabled="true">Live</a>
               </div>
             </div>
           </article>
@@ -149,10 +151,12 @@
         </div>
         <ul class="skill-list" role="list">
           <li>HTML • CSS • JS</li>
-          <li>React • Flutter • Node</li>
-          <li>Python • OpenCV • scikit‑learn</li>
           <li>Firebase • MongoDB • PostgreSQL</li>
           <li>Git • GitHub • CI/CD</li>
+          <li>Wordpress • Wampserver</li>
+          <li>Cloud Technologies • AWS Basics</li>
+          <li>DevOps • Docker </li>
+
         </ul>
       </div>
     </section>
@@ -182,7 +186,7 @@
             <div class="actions">
               <button type="submit" class="btn primary">Send</button>
               <a class="btn ghost" href="mailto:you@example.com">Email me</a>
-              <a class="btn ghost" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
+              <a class="btn ghost" href="https://www.linkedin.com/feed/" target="_blank" rel="noopener">LinkedIn</a>
               <a class="btn ghost" href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
             </div>
             <p class="muted tiny">This form is client‑side only for now.</p>
