Discribe what you changed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="project-grid">
           <!-- Project 1 -->
           <article class="card project" data-animate>
-           <img class="project-thumb" src="" alt="Project 1 thumbnail" />
+           <img class="project-thumb" src="assets/pro 1.jpg" alt="Project 1 thumbnail" />
             <div class="card-body">
               <h3>Gaming Application / Happy Puzzle Land 🧩</h3>
               <p>Kids’ puzzle game designed to boost creativity and problem-solving skills.
@@ -111,7 +111,7 @@
 
           <!-- Project 2 -->
           <article class="card project" data-animate>
-              <img class="project-thumb" src="portfolio-site/Project 2/figma.jpg" alt="Project 2 thumbnail" />
+              <img class="project-thumb" src="assets/figma.jpg" alt="Project 2 thumbnail" />
             <div class="card-body">
               <h3>Mobile Application</h3>
               <p>Mobile application interface for tutorials, selling laptops. Admins manage content; notifications after orders.</p>
@@ -126,7 +126,7 @@
 
           <!-- Project 3 -->
           <article class="card project" data-animate>
-            <img class="project-thumb" src="portfolio-site/Project 3/Screenshot (528).png" alt="Project 3 thumbnail" />
+            <img class="project-thumb" src="assets/Screenshot (528).png" alt="Project 3 thumbnail" />
             <div class="card-body">
               <h3>Hotels Booking Website / Group Project</h3>
               <p>A modern travel and tourism website built with WordPress to showcase Serinity Hotels’ 
