Discribe what you changed

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 three branches and online booking features.</p>
               <p class="tech">Wordpress • Wamp sever • MongoDB</p>
               <div class="card-actions">
-                <a class="btn small" href="https://github.com/udsh2000/Webassignment/tree/main/portfolio-site/Project%203" target="_blank" rel="noopener">GitHub</a>
-                <a class="btn small ghost" href="https://github.com/udsh2000/Webassignment/tree/main/portfolio-site/Project%203" aria-disabled="true">Live</a>
+                <a class="btn small" href="" target="_blank" rel="noopener">GitHub</a>
+                <a class="btn small ghost" href="" aria-disabled="true">Live</a>
               </div>
             </div>
           </article>
